# madgraph4gpu

epoch1/kokkos/gg_ttgg/SubProcesses/: Makefile
epoch1/kokkos/gg_ttgg/SubProcesses/P1_Sigma_sm_gg_ttxgg/: check_sa.cu
epoch1/kokkos/gg_ttgg/src/: rambo.h
epoch1/oneapi/gg_ttgg_auto/SubProcesses/P1_Sigma_sm_gg_ttxgg/: CPPProcess.h  check_sa.cpp
epoch2/sycl/gg_ttgg/: todo.md
epoch2/sycl/gg_ttgg/SubProcesses/: Makefile
epoch2/sycl/gg_ttgg/SubProcesses/P1_Sigma_sm_gg_ttxgg/: CPPProcess.cc  CPPProcess.h  check_sa.cc
epoch2/sycl/gg_ttgg/src/: HelAmps_sm.cc  HelAmps_sm.h  Makefile  grambo.cu  rambo.h
examples/sycl/SubProcesses/P1_Sigma_sm_gg_ttxgg/: CPPProcess.cpp  CPPProcess.h  check_sa.cpp
examples/sycl/gg_ttgg_auto/: CMakeLists.txt
examples/sycl/gg_ttgg_auto/SubProcesses/P1_Sigma_sm_gg_ttxgg/: CPPProcess.h  check_sa.cpp
examples/sycl/gg_ttgg_auto/src/: Parameters_sm.cpp  rambo.cpp
examples/sycl/src/: rambo.cpp
